--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,8 @@
       <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:wght@700&display=swap" rel="stylesheet">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <link rel="icon" href="yourLibraryLogo.png">
+    <title>YourLibrary</title>
   </head>
   <body>
     <noscript>
